# VideoSurveillanceSys

./: .gitignore  CMakeLists.txt  README.md
UseVnPkg/: CMakeLists.txt
apps/: CMakeLists.txt  transToAVI.cpp  videoSurverillanceSys.cpp
cmake/: VersionResource.rc  generate_product_version.cmake
examples/: CMakeLists.txt
include/HCNetSDK/: plaympeg4.h
include/VideoSurveillanceSys/: camera.h  common.h  detection.h  dnn_tensorflow.hpp  file_operation.h  interactive.h  monitor.h  object_detection.h  saveditem.h  skeleten_estimation.h  skeleton_estimation.h  timer.h
src/: CMakeLists.txt  VideoSurveillanceSys.rc  camera.cpp  common.cpp  detection.cpp  dnn_tensorflow.cpp  file_operation.cpp  interactive.cpp  main.cpp  monitor.cpp  object_detection.cpp  saveditem.cpp  skeleten_estimation.cpp  skeleton_estimation.cpp  timer.cpp
tests/: CMakeLists.txt
